test_programs/analisys/uninit.tip
// CMD: --run-pases=uninit_vars

main() {
    var a,b;

    return a; // expected-error{{Use of unitialized variable Indentifier(a)}}
}
